Improve the code structure for order tree and book